--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Join the party | waitr</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,40 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
+
+    <style>
+      .sellingPoint {
+        text-decoration: underline;
+        color: #00ccff;
+      }
+
+      .btn-default {
+        border-color: #00ccff !important;
+        color: #00ccff !important;
+      }
+
+      .btn-default:hover {
+        background-color: white;
+      }
+
+      .btn-circle {
+        border-color: #00ccff !important;
+        color: #00ccff !important;
+      }
+
+      li {
+        text-align: left !important;
+      }
+
+      .bulletPoint {
+        margin-bottom: 5px;
+      }
+
+      a, a:hover {
+        color: #00ccff ;
+      }
+    </style>
 
   </head>
 
@@ -28,7 +61,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <img id="logo" src="./img/logo.png"/>
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -39,10 +74,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+              <a class="nav-link js-scroll-trigger" href="#download">How it works</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Get Waitr</a>
             </li>
           </ul>
         </div>
@@ -55,9 +90,8 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h1 class="brand-heading">Grayscale</h1>
-              <p class="intro-text">A free, responsive, one page Bootstrap theme.
-                <br>Created by Start Bootstrap.</p>
+              <h1 class="brand-heading">waitr</h1>
+              <p class="intro-text">Do you own a restaurant? waitr lets your customers order and pay using their smartphones.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -67,61 +101,119 @@
       </div>
     </header>
 
-    <!-- About Section -->
+    <!-- SELL IT Section -->
     <section id="about" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Grayscale</h2>
-            <p>Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-            <p>This theme features stock photos by
-              <a href="http://gratisography.com/">Gratisography</a>
-              along with a custom Google Maps skin courtesy of
-              <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-            <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with SASS and LESS files for easy customization!</p>
+            <h2>About waitr</h2>
+            <div class="row">
+              <div class="col-lg-4">
+                <ul>
+                  <li style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">No setup costs!</span>
+                      Sign up for a free trial over at our App for Restaurants.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-4">
+                <ul>
+                  <li style="text-align: left !important">
+                    <p>We take
+                      <span class="sellingPoint">2%</span>
+                      of every order placed via waitr.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-4">
+                <ul>
+                  <li style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">No win, no fee.</span>
+                      If your customers don't use waitr to order, we won't charge you.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- HOW IT WORKS Section -->
     <section id="download" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          <h2>How waitr works</h2>
+          <div class="row">
+            <div class="col-lg-6">
+              <h6>For Restaurants</h6>
+              <ol>
+                <li><a href="https://app.waitr.live"><p class="bulletPoint">Create an account - for free!</p></a></li>
+                <li><p class="bulletPoint">Upload your menu via the interactive dashboard.</p></li>
+                <li><p class="bulletPoint">Securely provide your bank account details (we use <a href="https://stripe.com/gb">Stripe</a>)</p></li>
+                <li><p class="bulletPoint">Navigate to the Kitchen screen, and wait for orders to arrive on the screen.</p></li>
+                <li><p class="bulletPoint">Easily accept or reject them.</p></li>
+                <li><p class="bulletPoint">For the first 30 days, we won't take a fee. Afterwards, we'll take 2% of every order.</p></li>
+              </ol>
+            </div>
+            <div class="col-lg-6">
+              <h6>For Diners</h6>
+              <ol>
+                <li><a href="https://eat.waitr.live"><p class="bulletPoint">Create an account - for free!</p></a></li>
+                <li><p class="bulletPoint">Find your favourite restaurant.</p></li>
+                <li><p class="bulletPoint">Browse the menu, place your order and pay.</p></li>
+                <li><p class="bulletPoint">Key an eye on your phone for real-time updates to your order's status.</p></li>
+              </ol>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- APPS Section -->
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
+            <h2>Start Using waitr</h2>
+            <div class="row">
+              <div class="col-lg-5 offset-lg-1">
+                <ul>
+                  <li style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">For restaurants</span>
+                      , we have an app for uploading your menu and managing orders as they are placed.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-5">
+                <ul>
+                  <li style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">For diners</span>
+                      , we have an app for ordering and paying at your favourite restaurants.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                <a href="https://app.waitr.live" class="btn btn-default btn-lg">
+                  <i class="fa fa-home"></i>
+                  <span class="network-name">Restaurants</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
-                  <i class="fa fa-google-plus fa-fw"></i>
-                  <span class="network-name">Google+</span>
+                <a href="https://eat.waitr.live" class="btn btn-default btn-lg">
+                  <i class="fa fa-cutlery"></i>
+                  <span class="network-name">Diners</span>
                 </a>
               </li>
             </ul>
@@ -130,13 +222,10 @@
       </div>
     </section>
 
-    <!-- Map Section -->
-    <div id="map"></div>
-
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2018</p>
+        <p>waitr 2018</p>
       </div>
     </footer>
 
