--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>Join the party | waitr</title>
 
+    <link rel="shortcut icon" type="image/png" href="/img/logo.png"/>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -46,7 +47,8 @@
       }
 
       .bulletPoint {
-        margin-bottom: 5px;
+        margin-bottom: 0px;
+        font-size: 18px;
       }
 
       a, a:hover {
@@ -91,7 +93,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">waitr</h1>
-              <p class="intro-text">Do you own a restaurant? waitr lets your customers order and pay using their smartphones.</p>
+              <p class="intro-text">Do you own a restaurant? Waitr lets your customers order and pay using their smartphones.</p>
               <a href="#about" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
@@ -122,7 +124,7 @@
                 <ul>
                   <li style="text-align: left !important">
                     <p>We take
-                      <span class="sellingPoint">2%</span>
+                      <span class="sellingPoint">3%</span>
                       of every order placed via waitr.
                     </p>
                   </li>
@@ -153,18 +155,18 @@
             <div class="col-lg-6">
               <h6>For Restaurants</h6>
               <ol>
-                <li><a href="https://app.waitr.live"><p class="bulletPoint">Create an account - for free!</p></a></li>
+                <li><a href="https://app.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
                 <li><p class="bulletPoint">Upload your menu via the interactive dashboard.</p></li>
                 <li><p class="bulletPoint">Securely provide your bank account details (we use <a href="https://stripe.com/gb">Stripe</a>)</p></li>
                 <li><p class="bulletPoint">Navigate to the Kitchen screen, and wait for orders to arrive on the screen.</p></li>
                 <li><p class="bulletPoint">Easily accept or reject them.</p></li>
-                <li><p class="bulletPoint">For the first 30 days, we won't take a fee. Afterwards, we'll take 2% of every order.</p></li>
+                <li><p class="bulletPoint">For the first 30 days, we won't take a fee. Afterwards, we'll take 3% of every order.</p></li>
               </ol>
             </div>
             <div class="col-lg-6">
               <h6>For Diners</h6>
               <ol>
-                <li><a href="https://eat.waitr.live"><p class="bulletPoint">Create an account - for free!</p></a></li>
+                <li><a href="https://eat.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
                 <li><p class="bulletPoint">Find your favourite restaurant.</p></li>
                 <li><p class="bulletPoint">Browse the menu, place your order and pay.</p></li>
                 <li><p class="bulletPoint">Key an eye on your phone for real-time updates to your order's status.</p></li>
