--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
               <p>Canterbury, Kent</p>
             </div>
             <div class="row justify-content-center">
-              <i class="fa fa-envelope contactIcon"></i>
+              <i class="fa fa-phone contactIcon"></i>
               <a href="tel:+447776385384" class="phoneLink"><p>07776385384</p></a>
             </div>
             <div class="row justify-content-center">
-              <i class="fa fa-phone contactIcon"></i>
-              <p>hello@waitr.live</p>
+              <i class="fa fa-envelope contactIcon"></i>
+              <p>olly@waitr.live</p>
             </div>
           </div>
         </div>
