--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </div>
             <div class="row justify-content-center">
               <i class="fa fa-envelope contactIcon"></i>
-              <p>olly@waitr.live</p>
+              <p>hello@waitr.live</p>
             </div>
           </div>
         </div>
