--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
       .nav-link {
         font-size: 18px;
+        text-decoration: none;
       }
 
       .sellingPoint {
-        text-decoration: underline;
         color: #00ccff;
       }
 
@@ -63,6 +63,7 @@
 
       a, a:hover {
         color: #00ccff;
+        text-decoration: underline;
       }
 
       .teamInfo_img {
@@ -91,12 +92,21 @@
         color: #00ccff;
       }
 
-      .howItWorksIcon {
-        color: #00ccff;
-      }
-
       .phoneLink {
         color: white;
+      }
+
+      .btn {
+        float: middle !important;
+      }
+
+      .bulletList { list-style:none; }
+      .bulletList_point { margin-bottom:10px; }
+
+      .appLink {
+        text-decoration: none !important;
+        text-transform: none;
+        line-height: 0;
       }
     </style>
 
@@ -117,10 +127,10 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#howItWorks">How it works</a>
+              <a class="nav-link js-scroll-trigger" href="#benefits">Benefits</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#getWaitr">Get Waitr</a>
@@ -154,35 +164,40 @@
     </header>
 
     <!-- SELL IT Section -->
-    <section id="about" class="content-section text-center">
+    <section id="pricing" class="content-section text-center">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About waitr</h2>
+            <h2>Pricing</h2>
+            <div class="row justify-content-center">
+            </div>
             <div class="row">
               <div class="col-lg-4">
-                <ul>
-                  <li style="text-align: left !important">
+                <ul class="bulletList">
+                  <i class="fa fa-wrench"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
                     <p>
-                      <span class="sellingPoint">No setup costs!</span>
-                      Sign up for a free trial over at our App for Restaurants.
+                      <span class="sellingPoint">No setup costs!</span> You don't need any hardware; just a screen and an internet connection.
                     </p>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-4">
-                <ul>
-                  <li style="text-align: left !important">
-                    <p>We take
-                      <span class="sellingPoint">3%</span>
+                <ul class="bulletList">
+                  <i class="fa fa-percent"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
+                    <p>
+                      
+                      We take <span class="sellingPoint">5%</span>
                       of every order placed via waitr.
                     </p>
                   </li>
                 </ul>
               </div>
               <div class="col-lg-4">
-                <ul>
-                  <li style="text-align: left !important">
+                <ul class="bulletList">
+                  <i class="fa fa-gbp"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
                     <p>
                       <span class="sellingPoint">No win, no fee.</span>
                       If your customers don't use waitr to order, we won't charge you.
@@ -196,21 +211,83 @@
       </div>
     </section>
 
-    <!-- HOW IT WORKS Section -->
-    <section id="howItWorks" class="download-section content-section text-center">
+    <section id="benefits" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Benefits</h2>
+            <div class="row justify-content-center">
+            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="bulletList">
+                  <i class="fa fa-gbp"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
+                    <p>Increase your 
+                      <span class="sellingPoint">Avg. Transaction Value</span>. Customers spend more when they can place their order with a few taps.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="bulletList">
+                  <i class="fa fa-gbp"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">Reduce staff costs</span>
+                      and free up your waiters to really  look after your customers.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="bulletList">
+                  <i class="fa fa-bolt"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">Turn tables faster</span>.
+                      Customers don't need to wait for your waiters to take their orders or payment.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="bulletList">
+                  <i class="fa fa-heart"></i>
+                  <li class="bulletList_point" style="text-align: left !important">
+                    <p>
+                      <span class="sellingPoint">Personalise your outreach</span>.
+                      Send emails to customers based on their previous orders.
+                    </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- GET WAITR -->
+    <section id="getWaitr" class="download-section content-section text-center">
       <div class="container">
         <div class="col-lg-8 mx-auto">
-          <h2>How waitr works</h2>
+          <h2>Get Waitr</h2>
           <div class="row">
             <div class="col-lg-6">
               <h6><i class="fa fa-home howItWorksIcon"></i> For Restaurants</h6>
               <ol>
                 <li><a href="https://app.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
-                <li><p class="bulletPoint">Upload your menu via the interactive dashboard.</p></li>
+                <li><p class="bulletPoint">Upload your menu (or call us and we'll do it for you).</p></li>
                 <li><p class="bulletPoint">Securely provide your bank account details (we use <a href="https://stripe.com/gb">Stripe</a>)</p></li>
-                <li><p class="bulletPoint">Navigate to the Kitchen screen, and wait for orders to arrive on the screen.</p></li>
+                <li><p class="bulletPoint">Open the Kitchen page, and wait for orders to arrive.</p></li>
                 <li><p class="bulletPoint">Easily accept or reject them.</p></li>
-                <li><p class="bulletPoint">For the first 30 days, we won't take a fee. Afterwards, we'll take 3% of every order.</p></li>
+                <li><p class="bulletPoint">For the first 10 days, we won't take a fee. Afterwards, we'll take 5% of every order.</p></li>
               </ol>
             </div>
             <div class="col-lg-6">
@@ -219,56 +296,9 @@
                 <li><a href="https://eat.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
                 <li><p class="bulletPoint">Find your favourite restaurant.</p></li>
                 <li><p class="bulletPoint">Browse the menu, place your order and pay.</p></li>
-                <li><p class="bulletPoint">Key an eye on your phone for real-time updates to your order's status.</p></li>
+                <li><p class="bulletPoint">Sit back and relax. Keep an eye on your phone for real-time updates to your order's status.</p></li>
               </ol>
             </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- APPS Section -->
-    <section id="getWaitr" class="content-section text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Start Using waitr</h2>
-            <div class="row">
-              <div class="col-lg-5 offset-lg-1">
-                <ul>
-                  <li style="text-align: left !important">
-                    <p>
-                      <span class="sellingPoint">For restaurants</span>
-                      , we have an app for uploading your menu and managing orders as they are placed.
-                    </p>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-5">
-                <ul>
-                  <li style="text-align: left !important">
-                    <p>
-                      <span class="sellingPoint">For diners</span>
-                      , we have an app for ordering and paying at your favourite restaurants.
-                    </p>
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <ul class="list-inline banner-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://app.waitr.live" class="btn btn-default btn-lg">
-                  <i class="fa fa-home"></i>
-                  <span class="network-name">Restaurants</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://eat.waitr.live" class="btn btn-default btn-lg">
-                  <i class="fa fa-cutlery"></i>
-                  <span class="network-name">Diners</span>
-                </a>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -304,6 +334,12 @@
     <section id="contact" class="download-section content-section text-center">
       <div class="container">
         <h2>Get in Touch</h2>
+        <div class="row justify-content-center">
+          <p>
+            If you have any questions, or you need help with setup, just give us a call or shoot us an email.
+            We'll be there 
+          </p>
+        </div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
             <div class="row justify-content-center">
