--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       }
 
       .teamInfo_name {
+        font-weight: bold;
         margin-bottom: 5px;
         margin-top: 20px;
       }
@@ -279,7 +280,7 @@
         <div class="col-lg-8 mx-auto">
           <h2>Get Waitr</h2>
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6" style="padding-top: 20px; padding-bottom: 29px">
               <h6><i class="fa fa-home howItWorksIcon"></i> For Restaurants</h6>
               <ol>
                 <li><a href="https://app.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
@@ -290,7 +291,7 @@
                 <li><p class="bulletPoint">For the first 10 days, we won't take a fee. Afterwards, we'll take 5% of every order.</p></li>
               </ol>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6" style="padding-top: 20px">
               <h6><i class="fa fa-user howItWorksIcon"></i> For Diners</h6>
               <ol>
                 <li><a href="https://eat.waitr.live" class="bulletPoint">Create an account - for free!</a></li>
@@ -311,7 +312,7 @@
         <div class="row text-center">
           <div class="col-lg-12">
             <div class="row">
-              <div class="col-lg-4 offset-lg-2">
+              <div class="col-lg-4 offset-lg-2" style="padding-bottom: 30px">
                 <img src="./img/olly.jpg" class="rounded-circle text-center teamInfo_img">
                 <p class="teamInfo_name">Oliver Salisbury</p>
                 <p class="teamInfo_string">Taking care of all things business. Get me at 
@@ -334,11 +335,13 @@
     <section id="contact" class="download-section content-section text-center">
       <div class="container">
         <h2>Get in Touch</h2>
-        <div class="row justify-content-center">
-          <p>
-            If you have any questions, or you need help with setup, just give us a call or shoot us an email.
-            We'll be there 
-          </p>
+        <div class="row">
+          <div class="col-lg-6 offset-lg-3">
+            <p>
+              If you have any questions, or you need help with setup, just give us a call or shoot us an email.
+              We'll be there 
+            </p>
+          </div>
         </div>
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
