--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="row justify-content-center">
             </div>
             <div class="row">
-              <div class="col-lg-4">
+              <div class="col-lg-4 col-xs-12">
                 <ul class="bulletList">
                   <i class="fa fa-wrench"></i>
                   <li class="bulletList_point" style="text-align: left !important">
