--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <h2>Pricing</h2>
             <div class="row justify-content-center">
             </div>
-            <div class="row">
-              <div class="col-lg-4 col-xs-12">
+            <div class="row justify-content-center">
+              <div class="col-lg-4">
                 <ul class="bulletList">
                   <i class="fa fa-wrench"></i>
                   <li class="bulletList_point" style="text-align: left !important">
