--- a/index.html
+++ b/index.html
@@ -101,8 +101,14 @@
         float: middle !important;
       }
 
-      .bulletList { list-style:none; }
-      .bulletList_point { margin-bottom:10px; }
+      .bulletList { 
+        list-style:none;
+        padding-left: 15px;
+      }
+
+      .bulletList_point { 
+        margin-bottom:10px; 
+      }
 
       .appLink {
         text-decoration: none !important;
