--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                   <li class="bulletList_point" style="text-align: left !important">
                     <p>
                       
-                      We take <span class="sellingPoint">5%</span>
+                      We take <span class="sellingPoint">7%</span>
                       of every order placed via waitr.
                     </p>
                   </li>
@@ -231,7 +231,7 @@
                   <i class="fa fa-gbp"></i>
                   <li class="bulletList_point" style="text-align: left !important">
                     <p>Increase your 
-                      <span class="sellingPoint">Avg. Transaction Value</span>. Customers spend more when they can place their order with a few taps.
+                      <span class="sellingPoint">Avg. Transaction Value</span>. Customers spend more when they can place their order with just a few taps.
                     </p>
                   </li>
                 </ul>
@@ -293,8 +293,7 @@
                 <li><p class="bulletPoint">Upload your menu (or call us and we'll do it for you).</p></li>
                 <li><p class="bulletPoint">Securely provide your bank account details (we use <a href="https://stripe.com/gb">Stripe</a>)</p></li>
                 <li><p class="bulletPoint">Open the Kitchen page, and wait for orders to arrive.</p></li>
-                <li><p class="bulletPoint">Easily accept or reject them.</p></li>
-                <li><p class="bulletPoint">For the first 10 days, we won't take a fee. Afterwards, we'll take 5% of every order.</p></li>
+                <li><p class="bulletPoint">Easily accept or reject them; cook, prepare, and bring your happy customers their food!</p></li>
               </ol>
             </div>
             <div class="col-lg-6" style="padding-top: 20px">
