--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#demo">Demo</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
@@ -169,6 +172,17 @@
         </div>
       </div>
     </header>
+
+    <section id="demo" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Demo</h2>
+            <img src="./img/demo.gif" class="" style="height: 500px; width: auto; ">
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- SELL IT Section -->
     <section id="pricing" class="content-section text-center">
@@ -344,7 +358,7 @@
           <div class="col-lg-6 offset-lg-3">
             <p>
               If you have any questions, or you need help with setup, just give us a call or shoot us an email.
-              We'll be there 
+              We'll be there.
             </p>
           </div>
         </div>
