--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
         text-transform: none;
         line-height: 0;
       }
+
+      #demoGif {
+        height: 500px;
+        width: auto;
+        @media (max-width: 576px) {
+          height: 250px;
+        }
+      }
     </style>
 
   </head>
@@ -178,7 +186,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Demo</h2>
-            <img src="./img/demo.gif" class="" style="height: 500px; width: auto; ">
+            <img src="./img/demo.gif" id="demoGif">
           </div>
         </div>
       </div>
