Make gif size repsonsive

--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
       #demoGif {
         height: 500px;
         width: auto;
+        margin-left: auto;
+        margin-right: auto;
         @media (max-width: 576px) {
           height: 50px;
+          width: 50px;
         }
       }
     </style>
