Make gif size repsonsive

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         width: auto;
         margin-left: auto;
         margin-right: auto;
-        @media (max-width: 576px) {
+        @media (min-width: 515px) {
           height: 50px;
           width: 50px;
         }
