--- a/index.html
+++ b/index.html
@@ -117,11 +117,19 @@
       }
 
       #demoGif {
-        height: 100px;
+        height: 500px;
         width: auto;
         margin-left: auto;
         margin-right: auto;
       }
+
+      @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+        #demoGif {
+          width: 70%;
+          height: auto;
+        }
+      }
+
     </style>
 
   </head>
