Add Gif with payment

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Demo</h2>
-            <img src="./img/demo.gif" id="demoGif">
+            <img src="./img/demoWithPay.gif" id="demoGif">
           </div>
         </div>
       </div>
