Change title, tagline; correct href

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Join the party | waitr</title>
+    <title>Sign up now | waitr</title>
 
     <link rel="shortcut icon" type="image/png" href="./img/logo.png"/>
     <!-- Bootstrap core CSS -->
@@ -178,8 +178,8 @@
           <div class="row">
             <div class="col-lg-8 mx-auto">
               <h1 class="brand-heading">waitr</h1>
-              <p class="intro-text">Do you own a restaurant? Waitr lets your customers order and pay using their smartphones.</p>
-              <a href="#about" class="btn btn-circle js-scroll-trigger">
+              <p class="intro-text">Do you own a restaurant? Waitr lets your customers order and pay from their table using their smartphones.</p>
+              <a href="#demo" class="btn btn-circle js-scroll-trigger">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
